# magisterka-ga-svm

./: .gitignore  README.md  create_project.py  mlflow.db  pyproject.toml  requirements.txt
configs/: base.yaml
mlruns/335088491250690910/: meta.yaml
mlruns/335088491250690910/154dca58a49a427cbd35fcdfd13d67c3/: meta.yaml
mlruns/335088491250690910/154dca58a49a427cbd35fcdfd13d67c3/metrics/: baseline.accuracy  baseline.balanced_accuracy  baseline.f1  baseline.f1_macro  baseline.fit_metric  baseline.fit_time  baseline.pr_auc  baseline.roc_auc  baseline.score_time  svm.approx_cost  svm.n_fixed_eval  svm.n_train_eval  svm.val_points_evaluated  val_ga.best_gen  val_ga.global_best  val_ga.mean_gen  (+2 more)
mlruns/335088491250690910/6cf25e92af664ce28ed413e6876db391/: meta.yaml
mlruns/335088491250690910/7d13be2eab33403d81d8eb19357dc116/: meta.yaml
mlruns/335088491250690910/8c2c531f149141ed96cc44702694ce52/: meta.yaml
mlruns/335088491250690910/cc6846ab59d64ac1961977d5155649a7/: meta.yaml
mlruns/335088491250690910/d0b2892e67594a21b5e33a167c766423/: meta.yaml
mlruns/335088491250690910/d73fd97e66e1422f9cd9f07c6b20f0d2/: meta.yaml
mlruns/335088491250690910/f8eb4a65188b4ef5be0afe4e41c97f98/: meta.yaml
mlruns/335088491250690910/fc115e7ed9da4e7fb825e10995992b58/: meta.yaml
scripts/: data_load.py  demo_2d_k_per_class.py  run_experiment.py
src/ga/: diversity.py  encoding.py  fitness.py  profiling.py
src/ga/data/: loader.py
src/ga/loop/: engine.py
src/ga/models/: svm.py
src/ga/utils/: artifacts.py  io.py  logger.py  random.py
tests/: test_data_loader.py
(+130 files in other folders)
